# tech-bot

bot/: Cargo.toml
bot/src/: main.rs
web/: Cargo.toml  package.json  pnpm-lock.yaml
web/src/: database.rs  errors.rs  main.rs  routes.rs  state.rs
web/templates/: base.html  error.html
