[package]
name = "bot"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Langlois <antoine.l@antoine-langlois.net>"]
description = "Discord bot"

[dependencies]
once_cell = "1.17"
poise = "0.5"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
url = "2.3"
lib = { path = "../lib" }
